# vouch

./: .gitignore  README.md  pyproject.toml  vouch-prd.md
phase0/: RESULT.md  probe.py
phase1/: RESULT.md
src/vouch/: __init__.py  capture.py  cli.py  cluster.py  diff.py  judge.py  manifest.py  models.py  normalize.py  pricing.py  providers.py  snapshot.py  store.py
src/vouch/ingest/: __init__.py  claude_code.py  openai_jsonl.py
tests/: test_capture.py  test_cluster.py  test_diff.py  test_ingest_claude_code.py  test_ingest_openai_jsonl.py  test_judge.py  test_normalize.py  test_snapshot.py  test_store.py
