[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vouch-evals"
version = "0.1.0.dev0"
description = "A regression suite for your LLM calls that writes itself from production traffic."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Satwik Pattanaik" }]
dependencies = ["typer>=0.12"]

[project.scripts]
vouch = "vouch.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/vouch"]
