[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vouch-evals"
version = "0.1.0.dev0"
description = "A regression suite for your LLM calls that writes itself from production traffic."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Satwik Pattanaik" }]
dependencies = ["typer>=0.12", "httpx>=0.27"]

[project.scripts]
vouch = "vouch.cli:app"

[project.optional-dependencies]
capture = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "fastapi>=0.110", "uvicorn>=0.29"]

[tool.hatch.build.targets.wheel]
packages = ["src/vouch"]
